--- a/Mes/pom.xml
+++ b/Mes/pom.xml
@@ -31,7 +31,12 @@
 		<dependency>
 			<groupId>API</groupId>
 			<artifactId>api</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.squareup.okhttp</groupId>
+		  <artifactId>okhttp</artifactId>
+		  <version>2.7.5</version>
 		</dependency>
     </dependencies>
 
