--- a/Mes/pom.xml
+++ b/Mes/pom.xml
@@ -29,9 +29,9 @@
             <scope>test</scope>
         </dependency>
 		<dependency>
-			<groupId>API</groupId>
-			<artifactId>api</artifactId>
-			<version>1.1</version>
+			<groupId>FLIB</groupId>
+			<artifactId>flib</artifactId>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 		  <groupId>com.squareup.okhttp</groupId>
