--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Mes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.FLIB.jar=FLIB.jar
+file.reference.FLIB.jar=../../FLIB/FLIB/dist/FLIB.jar
 file.reference.postgresql-9.4-1201.jdbc4.jar=postgresql-9.4-1201.jdbc4.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
