--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.4-1201.jdbc4.jar}:\
-    ${file.reference.FLIB.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.FLIB.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
